organize assets folder a bit

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <link
       rel="apple-touch-icon"
-      href="/apple-touch-icon.png" />
+      href="/icons/apple-touch-icon.png" />
     <link
       rel="icon"
-      href="/favicon.ico"
+      href="/icons/favicon.ico"
       sizes="48x48" />
     <link
       rel="icon"
-      href="/favicon.svg"
+      href="/icons/favicon.svg"
       sizes="any"
       type="image/svg+xml" />
     <meta
